Related: tdf#152770 we don't use the font list, so don't warn if its empty

this is a left over from unused code removal

Change-Id: I6f6451561ae644a41d402f4de0d805a00945a66d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145712
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>